# Lab2-

./: AllocatorConsoleApp.cpp  AllocatorConsoleApp.h  BBV.cpp  BBV.h  CMakeLists.txt  README.md  boolequation.cpp  boolequation.h  boolinterval.h  main.cpp
AllocatorConsoleApp/: AllocatorConsoleApp.cpp  CMakeLists.txt
Allocator_Integrated_and_time_duration/: CMakeLists.txt
Allocator_Integrated_and_time_duration/SAT_DPLL/: BBV.cpp  CMakeLists.txt  NodeBoolTree.h  boolequation.cpp  boolinterval.h  main.cpp
Allocator_Integrated_and_time_duration/SAT_DPLL/SatExamples/: Sat_ex14_3.pla
Allocator_Integrated_and_time_duration/externalAllocator/Allocator/: CMakeLists.txt
Allocator_Integration_and_time_duration_to_compare/: CMakeLists.txt
Allocator_Integration_and_time_duration_to_compare/SAT_DPLL/: BBV.h  CMakeLists.txt  boolequation.h  boolinterval.cpp
Allocator_Integration_and_time_duration_to_compare/externalAllocator/Allocator/: CMakeLists.txt
SAT_DPLL/: BBV.cpp  BBV.h  CMakeLists.txt  boolequation.cpp  boolequation.h  boolinterval.h  main.cpp
